--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cookie": "^0.4.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "sass": "^1.49.9",
     "svelte": "^3.46.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
